--- a/style.css
+++ b/style.css
@@ -1,177 +1,53 @@
-@import "compass/css3";
+@import url(https://fonts.googleapis.com/css?family=Oswald:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
 
-* {
-  box-sizing: border-box;
+/* Override UGG site */
+#main {width: 100%; padding:0;}
+.content-asset p {margin:0 auto;}
+.breadcrumb {display:none;}
+
+/* Helpers */
+/**************************/
+.margin-top-10 {padding-top:10px;}
+.margin-bot-10 {padding-bottom:10px;}
+
+/* Typography */
+/**************************/
+#parallax-world-of-ugg h1 {font-family:'Oswald', sans-serif; font-size:24px; font-weight:400; text-transform: uppercase; color:black; padding:0; margin:0;}
+#parallax-world-of-ugg h2 {font-family:'Oswald', sans-serif; font-size:70px; letter-spacing:10px; text-align:center; color:white; font-weight:400; text-transform:uppercase; z-index:10; opacity:.9;}
+#parallax-world-of-ugg h3 {font-family:'Oswald', sans-serif; font-size:14px; line-height:0; font-weight:400; letter-spacing:8px; text-transform: uppercase; color:black;}
+#parallax-world-of-ugg p {font-family:'Source Sans Pro', sans-serif; font-weight:400; font-size:14px; line-height:24px;}
+.first-character {font-weight:400; float: left; font-size: 84px; line-height: 64px; padding-top: 4px; padding-right: 8px; padding-left: 3px; font-family: 'Source Sans Pro', sans-serif;}
+
+.sc {color: #3b8595;}
+.ny {color: #3d3c3a;}
+.atw {color: #c48660;}
+
+/* Section - Title */
+/**************************/
+#parallax-world-of-ugg .title {background: white; padding: 60px; margin:0 auto; text-align:center;}
+#parallax-world-of-ugg .title h1 {font-size:35px; letter-spacing:8px;}
+
+/* Section - Block */
+/**************************/
+#parallax-world-of-ugg .block {background: white; padding: 60px; width:820px; margin:0 auto; text-align:justify;}
+#parallax-world-of-ugg .block-gray {background: #f2f2f2;padding: 60px;}
+#parallax-world-of-ugg .section-overlay-mask {position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; opacity: 0.70;}
+
+/* Section - Parallax */
+/**************************/
+#parallax-world-of-ugg .parallax-one {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(https://images.unsplash.com/photo-1415018255745-0ec3f7aee47b?dpr=1&auto=format&fit=crop&w=1500&h=938&q=80&cs=tinysrgb&crop=); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: top center;}
+#parallax-world-of-ugg .parallax-two {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(https://images.unsplash.com/photo-1432163230927-a32e4fd5a326?dpr=1&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
+#parallax-world-of-ugg .parallax-three {padding-top: 200px; padding-bottom: 200px; overflow: hidden; position: relative; width: 100%; background-image: url(https://images.unsplash.com/photo-1440688807730-73e4e2169fb8?dpr=1&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=); background-attachment: fixed; background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-repeat: no-repeat; background-position: center center;}
+
+/* Extras */
+/**************************/
+#parallax-world-of-ugg .line-break {border-bottom:1px solid black; width: 150px; margin:0 auto;}
+
+/* Media Queries */
+/**************************/
+@media screen and (max-width: 959px) and (min-width: 768px) {
+  #parallax-world-of-ugg .block {padding: 40px; width:620px;}
 }
-
-body {
-  background: url(https://subtlepatterns.com/patterns/use_your_illusion.png);
-  color: #eee;
-  font: 1em 'PT Sans', sans-serif;
-}
-input[type=radio] {display: none;}
-img.slide {max-width: 950px; max-height: 1000px; margin: 0 auto; border-radius: 5px; display: none;}
-
-label input:checked ~ img {display: block;}
-
-img.label {height: 150px; }
-
-.w {
-  width:50vmin;
-  height:80vmin;
-}
-
-.ts {
-  width:100%; height:100%;
-  position:relative;
-  --barH:10%;/*active zone height = 100% - barH*/
-}
-
-.t {
-  --w:20%;
-  display:block; width:var(--w); height:var(--barH);
-  position:absolute; bottom:0; left:var(--l);
-  transform-origin:top left;
-}
-
-.t img {
-  dislay:block; width:100%; height:100%;
-  object-fit:cover;
-  transform:scale(0.8);
-}
-
-[type="radio"] { 
-  display:none; 
-}
-
-:checked + label.t {
-  left:0; bottom:var(--barH);
-  height:calc(100% - var(--barH));
-}
-
-:checked + label.t img {
-  object-fit:contain;
-}
-
-/* 
-optional
-*/
-
-.ts {/*thumbnails bar*/
-  perspective:100px;
-  perspective-origin:center center;
-  transform-style:preserve-3d;
-  pointer-events:none;
-}
-
-.ts:after {/*the plate*/
-  content:"";
-  display:block; width:100%; height:15px;
-  position:absolute; bottom:0;
-  background:linear-gradient(transparent 20%, rgba(0,0,0,0.1));
-  transform:rotateX(90deg)scaleX(1.2);
-  transform-origin:bottom center;
-}
-
-:not(:checked) + .t {/*inactive labels*/
-  transform:translate3d(0, 0, -5px);
-  pointer-events:auto;
-}
-
-:not(:checked) + .t:hover {
-  transform:translate3d(0, -7px, -5px);
-  box-shadow:0 30px 30px -25px rgba(0,0,0,0.3);
-  cursor:pointer;
-}
-
-:not(:checked) + .t img {
-  transform:scale(0.9);/*create gaps*/
-}
-
-:checked + .t {/*active label*/
-  box-shadow:0 0 0 transparent;
-  animation:anim 2s 1;
-} @keyframes anim {
-  from { transform:rotateY(6deg)rotateX(3deg) }
-}
-
-/* 
-transitions
-*/
-.t {/*active->inactive & hover->rest*/
-  transition:transform 0.5s, bottom 0.6s, left 0.6s, width 0.3s, box-shadow 1s;
-}
-.t:hover, :checked + .t {
-  transition:transform 0.5s, bottom 0.6s, left 0.6s, width 0.3s, box-shadow 0s;
-}
-::selection {
-  background-color: #4EC6DE;
-}
-
-.tabbed {
-  width: 700px;
-  margin: 50px auto;
-}
-
-.tabbed > input {
-  display: none;
-}
-
-.tabbed > label {
-  display: block;
-  float: left;
-  padding: 12px 20px;
-  margin-right: 5px;
-  cursor: pointer;
-  transition: background-color .3s;
-}
-
-.tabbed > label:hover,
-.tabbed > input:checked + label {
-  background: #4EC6DE;
-}
-
-.tabs {
-  clear: both;
-  perspective: 600px;
-}
-
-.tabs > div {
-  width: 700px;
-  position: absolute;
-  border: 2px solid #4EC6DE;
-  padding: 10px 30px 40px;
-  line-height: 1.4em;
-  opacity: 0;
-  transform: rotateX(-20deg);
-  transform-origin: top center;
-  transition: opacity .3s, transform 1s;
-  z-index: 0;
-}
-
-#tab-nav-1:checked ~ .tabs > div:nth-of-type(1),
-#tab-nav-2:checked ~ .tabs > div:nth-of-type(2),
-#tab-nav-3:checked ~ .tabs > div:nth-of-type(3),
-#tab-nav-4:checked ~ .tabs > div:nth-of-type(4){
-  transform: rotateX(0);
-  opacity: 1;
-  z-index: 1;
-}
-
-@media screen and (max-width: 700px) {
-  .tabbed { width: 400px }
-  .tabbed > label { display: none }
-  .tabs > div {
-    width: 400px;
-    border: none;
-    padding: 0;
-    opacity: 1;
-    position: relative;
-    transform: none;
-    margin-bottom: 60px;
-  }
-  .tabs > div h2 {
-    border-bottom: 2px solid #4EC6DE;
-    padding-bottom: .5em;
-  }
-}
+@media screen and (max-width: 767px) {
+  #parallax-world-of-ugg .block {padding: 30px; width:420px;}
